--- a/elegant-todo-verse/tsconfig.app.json
+++ b/elegant-todo-verse/tsconfig.app.json
@@ -23,8 +23,8 @@
 
     "baseUrl": ".",
     "paths": {
-      "@/*": ["frontend/src/*"]
+      "@/*": ["./src/*"]
     }
   },
-  "include": ["frontend/src", "backend/backend", "backend/services"]
+  "include": ["./src"]
 }
