--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=3000
-URL=mongodb+srv://mariantoniaalves:jWRgwkcdB34OZFLg@lista-tarefas-cluster.ohabi48.mongodb.net/?retryWrites=true&w=majority&appName=lista-tarefas-cluster
+URL='mongodb+srv://mariantoniaalves:jWRgwkcdB34OZFLg@lista-tarefas-cluster.ohabi48.mongodb.net/?retryWrites=true&w=majority&appName=lista-tarefas-cluster'
