--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^6.16.0"
+    "mongodb": "^6.16.0",
+    "redis": "^5.5.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
