tentando fazer deploy no render

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=3000
 URL='mongodb+srv://mariantoniaalves:jWRgwkcdB34OZFLg@lista-tarefas-cluster.ohabi48.mongodb.net/?retryWrites=true&w=majority&appName=lista-tarefas-cluster'
+REDIS_URL=redis://default:g0qabpwmPpYvPorVIC7M5Q9VkK8aOyTH@redis-19260.c308.sa-east-1-1.ec2.redns.redis-cloud.com:19260
